# llm-from-scratch-cpp

./: .gitignore  CMakeLists.txt  README.md
data/: openwebtext-10k-test-small.txt  openwebtext-10k-train-small.txt
include/llm_fs/dataset/: BaseDataset.h  TextDataset.h
include/llm_fs/model/: GPTModel.h
include/llm_fs/model/dataset/: GPTDataset.h
include/llm_fs/tokenizer/: BaseTokenizer.h  RegexFastTokenizer.h  Tokenizer.h
scripts/: install_boost.sh  install_torch.sh
src/app/: App.cpp  CMakeLists.txt  RunModel.cpp  TrainModel.cpp  TrainTokenizer.cpp
src/lib/: CMakeLists.txt  Library.cpp  Library.hpp
src/lib/dataset/: BaseDataset.h  TextDataset.cpp  TextDataset.h
src/lib/model/: GPTModel.cpp
src/lib/model/dataset/: GPTDataset.cpp
src/lib/model/layers/: FeedForward.cpp  FeedForward.h  GELU.cpp  GELU.h  LayerNorm.cpp  LayerNorm.h  MultiHeadAttention.cpp  MultiHeadAttention.h  TransformerBlock.cpp  TransformerBlock.h
src/lib/tokenizer/: BaseTokenizer.cpp  BaseTokenizer.h  RegexFastTokenizer.cpp  RegexFastTokenizer.h  Tokenizer.cpp
src/lib/tokenizer/encoder/: Encoder.cpp  Encoder.h
src/lib/tokenizer/trainer/: Trainer.cpp  Trainer.h
tests/: CMakeLists.txt  test_main.cpp
tokenizers/: regex_tokenizer.vocab  regular_tokenizer.model
